--- a/index.html
+++ b/index.html
@@ -9,50 +9,101 @@
 </head>
 <body>
 
-<div id="first">
-	<h1>Register</h1>
-	<form>
-		<label for="FirstName">First Name:</label>
-		<input type="text" id="FirstName" placeholder="First Name" name="Name" required>
-		<label for=LastName>Last Name:</label>
-		<input type="text" id="LastName" placeholder="Last Name" name="Name" required="">
-		<div>
-			<label for="male">Male</label>
-			<input type="radio" id="male" name="gender" value="male">
-			<label for="female">Female</label>
-			<input type="radio" id="female" name="gender" value="female">
-			<label for="others">Others</label>
-			<input type="radio" id="others" name="gender" value="others">
-		</div>
-		<div>
-			<lable for="email">Email:</lable>
-			<input type="email" name="email" id="email" placeholder="Email Address" required>
-			<label for="password">Password:</label>
-			<input type="password" name="password" id="password"  required pattern=".{5,10}" title="Password must be between 5 and 10" placeholder="Password">
-		</div>
-		<div>
-			<label for="select-choice">Birthday:
-				<select name="BirthDay-Month" id="select-choice">
-		    		<option selected disabled>Month</option><option>January</option><option>February</option><option>March</option><option>April</option><option>May</option><option>June</option><option>July</option><option>August</option><option>September</option><option>October</option><option>November</option><option>December</option>
-				</select>
-				<select name="BirthDay-Day" id="select-choice">
-	        		<option selected disabled>Day</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option><option>6</option><option>7</option><option>8</option><option>9</option><option>10</option><option>11</option><option>12</option><option>13</option><option>14</option><option>15</option><option>16</option><option>17</option><option>18</option><option>19</option><option>20</option><option>21</option><option>22</option><option>23</option><option>24</option><option>25</option><option>26</option><option>27</option><option>28</option><option>29</option><option>30</option><option>31</option>
-				</select>
-				<select name="BirthDay-Year" id="select-choice">
-					<option  selected disabled>Year</option><option>1985</option><option>1986</option><option>1987</option><option>1988</option><option>1989</option><option>1990</option><option>1991</option><option>1992</option><option>1993</option><option>1994</option><option>1995</option><option>1996</option><option>1997</option><option>1998</option><option>1999</option><option>2000</option><option>2001</option><option>2002</option><option>2003</option><option>2004</option><option>2005</option><option>2006</option><option>2007</option>
-				</select>
-			</label>
-		</div>
-		<div>
-			<label for="checkbox">I agree to the terms and conditiond</label>
-			<input type="checkbox" id="checkbox" name="Terms and conditions" value="Accepted">
-		</div>
-		<div>
-			<button>submit</button>
-		</div>
-	</form>
-</div>
-
+    <form>
+            <h1 class="font"> <u>Registration Form </u></h1>
+           <h1><b><u>personal details</U></b></h1>
+           <table>
+            
+            <tr>
+                <td><label>Name:</lebel></td>
+                <td><input type="text" name="" placeholder="Name" required></td>
+             </tr>
+             <tr>
+                <td><label> Gurdian name:</lebel></td>
+                <td><input type="text" name="" placeholder="Gurdian's Name" required></td>
+             </tr>
+             <tr>
+                <td><label>Relationship with the  Gurdian</lebel></td>
+                <td><input type="text" name="" placeholder="relationship"></td>
+             </tr>
+             <tr>
+                <td><label>Phone number:</label></td>
+                <td><input type="number" name="" placeholder="Number" title="Phone number must be 10 digits" required></td>
+             </tr>
+             <tr>
+                <td><label>email:</label></td>
+                <td><input type="email" name="" placeholder="xyz@gmail.com"  required></td>
+             <tr>
+                <td><label>password:</label></td>
+                <td><input type="password" name=""  required pattern=".{5,10}" title="Password must be between 5 and 10" placeholder="xyz@0000"></td>
+             </tr>
+             <tr>
+                <td><label>Dob:</label></td>
+                <td><input type="date"name="" required></td>
+              </tr>
+              <tr>
+                 <td>Sex : </td>
+                 <td><div>
+                  <label for="male">Male</label>
+                  <input type="radio" id="male" name="gender" value="male">
+                  <label for="female">Female</label>
+                  <input type="radio" id="female" name="gender" value="female">
+                  <label for="others">Others</label>
+                  <input type="radio" id="others" name="gender" value="others">
+               </div></td>
+              </tr>
+           </table><hr>
+           <table>
+               <h1><u>Address </u></h1>
+               <tr>
+                  <td><label>Details:</label></td>
+                  <td><input type="text" name="" style="width: 250px; height: 75px;" required></td>
+               </tr>
+           </table><hr>
+           <h1> <u>educational qualification</u></h1>
+           <table>
+               <tr>
+                 <td><label>class</label><br>
+                 <input type="number" value="1,5,10" name="" required></td>
+                 <td><label>marks</label><br>
+                 <input type="numder" name="" required></td>
+                 <td><label>parcentage</label><br>
+                 <input type="number" name="" placeholder="without % sign" required></td>
+                 <td><label>year of passing</label><br>
+                 <input type="number"name=""></td>
+               </tr>
+           </table><hr>
+           <h1><u>Upload documents</u></h1>
+           <table>
+            <tr>
+                <td><label>Photo:</label></td>
+                <td><input type="file" name="" required></td>
+             </tr> 
+                <tr>
+                  <td><label>signature:</label></td>
+                  <td><input type="file" name="" required></td>
+               </tr>
+               <tr>
+                <td><label>Last Marksheet:</label></td>
+                <td><input type="file" name=""required></td>
+             </tr>
+             <tr>
+                <td><label>Adhaar Card:</label></td>
+                <td><input type="file" name="" required></td>
+             </tr> <tr>
+                <td><label>Income Certificate:</label></td>
+                <td><input type="file" name="" required></td>
+             </tr>
+           </table><hr>
+           <table>
+            <div class="ckeckbox">
+               <label for="checkbox">I agree to the terms and conditiond</label>
+               <input type="checkbox" id="checkbox" name="Terms and conditions" value="Accepted" required>
+            </div>
+           </table>
+              
+           <input type="submit" name="value ="press here" style="width: 75px; height: 50px;"><br>
+        </form>
 </body>
 </html>
 
