--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 </head>
 <body>
 
-    <form>
+    <form action="" method="post">
+	     <div class="navbar nav">
+            <img class="logoimage" src="logo.png" height="50" width="60">
+            <h1 class="logotext"><b class="typeo">XYZ</b><b class="typet">Company</b></h1>
+            </div>
+        
+	    
             <h1 class="font"> <u>Registration Form </u></h1>
            <h1><b><u>personal details</U></b></h1>
            <table>
