--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                  <input type="number" value="1,5,10" name="" required></td>
                  <td><label>marks</label><br>
                  <input type="numder" name="" required></td>
-                 <td><label>parcentage</label><br>
+                 <td><label>parcentage or CGPA</label><br>
                  <input type="number" name="" placeholder="without % sign" required></td>
                  <td><label>year of passing</label><br>
                  <input type="number"name=""></td>
