--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
                 <td><label>password:</label></td>
                 <td><input type="password" name=""  required pattern=".{5,10}" title="Password must be between 5 and 10" placeholder="xyz@0000"></td>
              </tr>
+		   <tr>
+                <td><label> School Name:</lebel></td>
+                <td><input type="text" name="" placeholder="Gurdian's Name" required></td>
+             </tr>
              <tr>
                 <td><label>Dob:</label></td>
                 <td><input type="date"name="" required></td>
